# ReAuth

./: .env  .env.example  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  build.rs  fix_imports.py  fix_structs.py  split_harbor.py  split_rbac.py  split_rbac_handler.py
core/: Cargo.toml  build.rs
core/src/: banner.rs  database.rs  logging.rs  main.rs  server.rs
core/src/database/: migrate.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  constants.rs  error.rs  main.rs  server.rs
crates/core/src/adapters/: mod.rs
crates/core/src/adapters/logging/: logging.rs
crates/core/src/adapters/persistence/: connection.rs  migrate.rs  mod.rs  sqlite_user_repository.rs
crates/core/src/adapters/web/: error.rs  mod.rs  rbac_handler.rs  server.rs  user_handler.rs
crates/core/src/application/: mod.rs  user_service.rs
crates/core/src/database/: connection.rs  migrate.rs
crates/core/src/database/models/: user.rs
crates/core/src/database/repositories/: user.rs
crates/core/src/domain/: group.rs  user.rs
crates/core/src/logging/: banner.rs  mod.rs  status.rs
crates/core/src/ports/: mod.rs  rbac_repository.rs  user_repository.rs
crates/plugin/manager/: Cargo.toml  build.rs
crates/plugin/manager/src/: config.rs  constants.rs  error.rs  grpc.rs  lib.rs  log_bus.rs  manager.rs  plugin.rs
crates/plugin/sdk/: Cargo.toml  build.rs
crates/plugin/sdk/src/: constants.rs  grpc.rs  lib.rs  plugin.rs  runner.rs
crates/reauth_core/: Cargo.toml  build.rs
crates/reauth_core/src/: config.rs  constants.rs  error.rs  lib.rs  main.rs
crates/reauth_core/src/adapters/: mod.rs
crates/reauth_core/src/adapters/auth/: cookie_authenticator.rs  mod.rs  password_authenticator.rs
crates/reauth_core/src/adapters/cache/: cache_invalidator.rs  mod.rs  moka_cache.rs
crates/reauth_core/src/adapters/crypto/: jwt_service.rs  key_manager.rs  mod.rs
crates/reauth_core/src/adapters/eventing/: in_memory_bus.rs  log_broadcast_bus.rs  mod.rs  multi_publisher.rs  outbox_worker.rs
crates/reauth_core/src/adapters/logging/: banner.rs  logger.rs  mod.rs  span_adapter.rs  tracing_adapter.rs
crates/reauth_core/src/adapters/observability/: sqlite_telemetry_repository.rs  telemetry_store.rs  telemetry_writer.rs
crates/reauth_core/src/adapters/persistence/: connection.rs  migrate.rs  mod.rs  sqlite_audit_repository.rs  sqlite_auth_session_repository.rs  sqlite_flow_repository.rs  sqlite_flow_store.rs  sqlite_oidc_repository.rs  sqlite_rbac_repository.rs  sqlite_realm_repository.rs  sqlite_session_repository.rs  sqlite_user_repository.rs  sqlite_webhook_repository.rs
crates/reauth_core/src/adapters/plugin_gateway/: event_gateway.rs  mod.rs
crates/reauth_core/src/adapters/web/: audit_handler.rs  auth_handler.rs  auth_middleware.rs  config_handler.rs  error.rs  execution_handler.rs  flow_handler.rs  log_stream_handler.rs  mod.rs  observability_handler.rs  oidc_handler.rs  plugin_handler.rs  rbac_handler.rs  realm_handler.rs  router.rs  search_handler.rs  server.rs  session_handler.rs  user_handler.rs  validation.rs  webhook_handler.rs
crates/reauth_core/src/application/: audit_service.rs  auth_service.rs  delivery_replay_service.rs  flow_engine.rs  flow_executor.rs  flow_manager.rs  flow_service.rs  metrics_service.rs  mod.rs  node_registry.rs  oidc_service.rs  rbac_service.rs  rbac_service_tests.rs  realm_service.rs  runtime_registry.rs  telemetry_service.rs  user_service.rs  webhook_service.rs
crates/reauth_core/src/application/auth_service/: mod.rs  tests.rs
crates/reauth_core/src/application/flow_engine/: mod.rs  tests.rs
crates/reauth_core/src/application/flow_executor/: mod.rs  tests.rs
crates/reauth_core/src/application/flow_manager/: flow_manager_tests.rs  mod.rs  templates.rs
crates/reauth_core/src/application/flow_service/: mod.rs
crates/reauth_core/src/application/oidc_service/: mod.rs  oidc_service_tests.rs  tests.rs
crates/reauth_core/src/application/rbac_service/: mod.rs  tests.rs
crates/reauth_core/src/application/realm_service/: mod.rs  tests.rs
crates/reauth_core/src/bootstrap/: app_state.rs  database.rs  events.rs  infrastructure.rs  initialize.rs  logging.rs  mod.rs  plugins.rs  repositories.rs  runtime.rs  seed.rs  services.rs
crates/reauth_core/src/bootstrap/seed/: admin.rs  flows.rs  history.rs  oidc.rs  realm.rs
crates/reauth_core/src/domain/: auth_flow.rs  auth_session.rs  auth_session_action.rs  crypto.rs  events.rs  execution.rs  flow.rs  group.rs  log_entry.rs  mod.rs  oidc.rs  pagination.rs  permissions.rs  rbac.rs  realm.rs  role.rs  session.rs  telemetry.rs  user.rs  webhook.rs
crates/reauth_core/src/domain/auth_flow/: auth_flow_tests.rs
crates/reauth_core/src/domain/auth_session/: auth_session_tests.rs
crates/reauth_core/src/domain/compiler/: compiler.rs  flow_compiler.rs  mod.rs  validator.rs
crates/reauth_core/src/domain/crypto/: crypto_tests.rs
crates/reauth_core/src/domain/events/: events_tests.rs
crates/reauth_core/src/domain/execution/: lifecycle.rs  mod.rs  tests.rs
crates/reauth_core/src/domain/flow/: models.rs  provider.rs
crates/reauth_core/src/domain/group/: group_tests.rs
crates/reauth_core/src/ports/: audit_repository.rs  authenticator.rs  cache_service.rs  event_bus.rs  flow_repository.rs  flow_store.rs  log_bus.rs  mod.rs  oidc_repository.rs  rbac_repository.rs  realm_repository.rs  session_repository.rs  telemetry_repository.rs  token_service.rs  user_repository.rs  webhook_repository.rs
crates/reauth_core/tests/: api.rs  proptest_flow_graph.proptest-regressions  proptest_flow_graph.rs  proptest_rbac.rs  rbac_integration_test.rs  sqlite_audit_repository.rs  sqlite_auth_session_repository.rs  sqlite_flow_repository.rs  sqlite_flow_store.rs  sqlite_oidc_repository.rs  sqlite_outbox_repository.rs  sqlite_rbac_repository.rs  sqlite_realm_repository.rs  sqlite_session_repository.rs  sqlite_user_repository.rs  sqlite_webhook_repository.rs
crates/reauth_core/tests/api/: auth_oidc_flow.rs  health.rs  observability.rs  request_id.rs
crates/reauth_core/tests/support/: mod.rs
docs/: README.md
(+1275 files in other folders)
