[package]
name = "reauth"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = []       # default: dev mode (proxy)
embed-ui = []      # prod mode (embed UI)

[dependencies]
axum = { version = "0.8.6", features = ["ws"] }
axum-extra = { version = "0.12.2", features = ["typed-header", "cookie"] }
http = "1.1.0"
http-body-util = "0.1.2"
tower-http = { version = "0.5.2", features = ["fs", "trace", "cors"] }
reqwest = { version = "0.12.5", features = ["json"] }
mime_guess = "2.0.5"
url = "2.5.7"

tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
futures = "0.3.30"
time = "0.3.44"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"

config = { version = "0.15.19", features = ["toml"] }
dotenvy = "0.15.7"
colored = "2.1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time", "json"] }
once_cell = "1.19.0"

sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-rustls", "macros", "uuid", "chrono"] }
argon2 = { version = "0.5", features = ["std"] }
password-hash = { version = "0.5.0", features = ["rand_core", "std"] }
rand_core = { version = "0.6.4", features = ["std"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
rsa = { version = "0.9", features = ["std", "pem"] }
rand = "0.8"

anyhow = "1.0.82"
thiserror = "1.0.60"
async-trait = "0.1.79"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
moka = { version = "0.12.7", features = ["future"] }
chrono = { version = "0.4.38", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }
rust-embed = "8.3.0"
cookie = "0.18.1"
notify = "6.1.1"

[dev-dependencies]
mockall = "0.13.0"
serial_test = "3.1.1"
tempfile = "3.10.1"
tower = "0.5.2"
proptest = "1.10.0"

[profile.dev]
incremental = true
opt-level = 0
