[package]
name = "reauth"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = []       # default: dev mode (proxy)
embed-ui = []      # prod mode (embed UI)

[dependencies]
axum = { version = "0.8.8", default-features = false, features = ["http1", "http2", "json", "matched-path", "ws", "query", "form", "original-uri"] }
axum-extra = { version = "0.12.5", features = ["typed-header", "cookie"] }
http = "1.1.0"
http-body-util = "0.1.2"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
mime_guess = "2.0.5"
url = "2.5.8"

tokio = { version = "1.37.0", features = ["rt-multi-thread", "net", "macros", "time", "signal"] }
futures = "0.3.30"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"

config = { version = "0.15.19", features = ["toml"] }
dotenvy = "0.15.7"
colored = "3.1.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time", "json"] }
once_cell = "1.19.0"

sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros", "uuid", "chrono", "json", "migrate"] }
argon2 = "0.6.0-rc.7"
password-hash = "0.6.0-rc.12"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
rsa = { version = "0.10.0-rc.16", features = ["std", "sha2"] }
rand = "0.10.0"

anyhow = "1.0.82"
thiserror = "2.0.18"
async-trait = "0.1.79"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
moka = { version = "0.12.7", features = ["future"] }
chrono = { version = "0.4.38", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }
rust-embed = "8.3.0"
cookie = "0.18.1"
notify = "8.2.0"

[dev-dependencies]
mockall = "0.14.0"
serial_test = "3.1.1"
tempfile = "3.10.1"
tower = "0.5.2"
proptest = "1.10.0"

[profile.dev]
incremental = true
opt-level = 0

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Maximize LTO impact
panic = "abort"     # Remove unwinding tables (saves ~10% size)
strip = true        # Automatically strip symbols from the binary
