[package]
name = "reauth_core"
version = "0.1.0"
edition = "2021"

[features]
default = []       # default: dev mode (proxy)
embed-ui = []      # prod mode (embed UI)

[dependencies]
# Local Crate Dependencies
manager = { path = "../plugin/manager" }

validator = { workspace = true, features = ["derive"] }
config = { workspace = true, features = ["toml"] }
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
dotenvy = { workspace = true }
colored = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
rust-embed = { workspace = true }
anyhow = { workspace = true }
mime_guess = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tonic = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
serde_json = { workspace = true }
moka = { workspace = true, features = ["future"] }
chrono = { workspace = true }
futures = { workspace = true }
argon2 = { workspace = true }
password-hash = { workspace = true }
rand_core = { workspace = true }
http = { workspace = true }
sqlx = { workspace = true }
tower-http = { workspace = true }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }