[package]
name = "reauth-plugin-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.11"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "2.0.17"

[build-dependencies]
tonic-build = "0.11"
protoc-bin-vendored = "3.0.0"