[package]
name = "manager"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
http = { workspace = true }
prost = "0.12"
async-trait = "0.1.89"

[build-dependencies]
tonic-build = "0.11"
protoc-bin-vendored = "3.0.0"