[package]
name = "sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
http = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio-stream = { version = "0.1", features = ["net"] }
prost = "0.12"
tower = "0.4.13"

[build-dependencies]
tonic-build = "0.11"
protoc-bin-vendored = "3.0.0"